add: inline dummy table
ugly table for temporary testing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
     text-align: center;
 }
 .formLabelEntryPair {
-    padding: 8px 8px 8px 8px
+    padding: 16px 8px 16px 8px
+}
+.inlineElement {
+    display: inline-block;
 }
 
 /*** IDs ***/
