--- a/style.css
+++ b/style.css
@@ -1,17 +1,35 @@
 /*** Tags ***/
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
+}
 
 /*** Classes ***/
 .formBody {
     text-align: center;
+    min-width: 400px;
+    max-width: 40%;
 }
 .formLabelEntryPair {
     padding: 16px 8px 16px 8px
 }
 .inlineElement {
     display: inline-block;
+    vertical-align: top;
 }
 
 /*** IDs ***/
 #formHeader {
     font-weight: bold;
+}
+
+#errors {
+    border-style: none;
+    /* border-style: solid; */
+    border-width: 2px;
+    border-color: rgb(197, 17, 17);
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: rgb(114, 0, 0);
 }
