--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ body {
     margin-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    width: auto;
     color: rgb(114, 0, 0);
 }
 
 #tableContainer {
-    width: 60%;
-    min-height: 400px;
-    max-height: 800px;
+    min-width: 400px;
+    max-width: 60%;
+    height: 90vh;
     overflow-x: auto;
     overflow-y: auto;
 }
